@@ -1,3 +1,9 @@
+2004-05-19  James Tanis  <jtt@buscemi.sysdetect.com>
+
+	* lib/b_ringbuf.c (bk_ring_read): Name a variable deadbeef and use
+	its address instead of 0xdeadbeef so that Insure will shut the
+	hell up.
+
 2004-05-18  Alexander Dupuy  <dupuy@sysdetect.com>
 
 	* lib/b_strconv.c (bk_string_xmlsafe): #963: don't print control chars
